src/styles/views/managers/language.scss
.languages {
  @include fluid(padding, 900px, 1850px, 30px, 60px);
  .view {
    &--header {
      @include fluid(margin-bottom, 900px, 1850px, 50px, 100px);
    }
    &--title {
      @include fluid(margin-bottom, 900px, 1850px, 16px, 24px);
    }
  }
  &--buttons {
    display: grid;
    gap: 30px 20px;
    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
  }
  &--button {
    padding: 20px;
    background-color: rgba(var(--white), 1);
    border-radius: 14px;
    box-shadow: 0px 2px 10px rgba(151, 152, 171, 0.25);
    position: relative;
    transition: box-shadow 0.2s;
    &:hover,
    &:focus {
      box-shadow: 0px 2px 10px rgba(36, 150, 129, 0.2);
    }
    &_add {
      display: flex;
      flex-direction: column;
      justify-content: flex-end;
      border-radius: 23px;
      .languages--name {
        pointer-events: none;
      }
      &:hover,
      &:focus {
        svg {
          fill: rgba(var(--green), 1);
        }
        .bcmsInput_dropdown {
          svg {
            fill: rgba(var(--grey), 1);
          }
          &--search {
            margin-bottom: 25px;
            svg {
              fill: rgba(var(--grey), 0.5);
            }
          }
        }
      }
    }
    &-label {
      position: absolute;
      width: 100%;
      height: 100%;
      bottom: 0;
      left: 0;
      // cursor: pointer;
      .bcmsRadio {
        position: absolute;
        bottom: -6px;
        left: 50%;
        transform: translateX(-50%);
        width: 12px;
        height: 12px;
        &_disabled {
          cursor: initial;
        }
        &--circle {
          background-color: rgba(var(--green), 1) !important;
          width: 100%;
          height: 100%;
          .languages--checkmark {
            display: flex;
            width: 100%;
            height: 100%;
          }
          svg {
            width: 70%;
            fill: rgba(var(--white), 1);
            margin: auto;
            position: relative;
            top: -0.5px;
          }
        }
        &--input:not(:checked) {
          display: none;
          & + .bcmsRadio--outline {
            display: none;
            & + .bcmsRadio--circle {
              display: none;
            }
          }
        }
      }
    }
  }
  &--flag {
    width: 24px;
    height: 24px;
    margin-bottom: 10px;
  }
  &--name {
    font-size: 12px;
    line-height: 1.5;
    text-transform: uppercase;
    letter-spacing: 0.06em;
    color: rgba(var(--dark), 1);
    font-weight: 400;
  }
  &--icon {
    position: absolute;
    border-radius: 50%;
    &_close {
      top: 5px;
      right: 5px;
      svg {
        width: 24px;
        fill: rgba(var(--grey), 1);
      }
    }
    &_add {
      position: static;
      margin-bottom: 10px;
      pointer-events: none;
      svg {
        width: 24px;
        fill: rgba(var(--grey), 1);
        transition: fill 0.22s;
      }
    }
  }
  &--dropdown {
    position: absolute;
    top: 115px;
    left: 0;
    width: 320px;
    text-align: left;
    box-shadow: 0px 0px 24px rgba(46, 46, 46, 0.12);
    border-radius: 10px;
    background-color: rgba(var(--white), 1);
    padding: 20px;
    .bcmsInput_dropdown {
      &--search {
        display: flex;
        align-items: center;
        svg {
          width: 18px;
          height: 18px;
          flex-shrink: 0;
          fill: rgba(var(--grey), 0.5);
        }
      }
      &--toggler {
        display: none;
      }
      &--list {
        border: none;
        position: relative;
        display: block !important;
        &-item {
          padding-left: 0;
          color: rgba(var(--dark), 1);
          &:hover {
            &::before {
              display: none;
            }
          }
          &_selected {
            &::before {
              display: none;
            }
          }
        }
      }
    }
    .bcmsInput--inner {
      border: none;
      &:hover,
      &:focus-within {
        border: none;
        box-shadow: none;
        .bcmsInput_dropdown--list {
          border: none !important;
          box-shadow: none !important;
        }
      }
    }
  }
}

